# Aether_Runner

./: .env.example  .gitignore  AGENTS.md  Aether-Multimodal-Native-Runner_Build-Spec.md  CHANGELOG.md  Clean-Engineering-RFC-Version-Technical-Spec.md  Dockerfile  PROJECT_STATE.md  README.md  TRUTH.md  docker-compose.yml  pyproject.toml  requirements-inference.txt  requirements.txt
aether_runner/: main.py
aether_runner/adapters/: base.py  gemma4.py  generic_hf.py
aether_runner/api/: __init__.py  routes.py
aether_runner/backends/: transformers_backend.py
aether_runner/core/: __init__.py  auth.py  config.py  errors.py  logging.py  metrics.py
aether_runner/models/: __init__.py  schemas.py
aether_runner/services/: __init__.py  assets.py  audio.py  executor.py  image.py  media_ingest.py  model_registry.py  normalization.py  preprocess.py  video.py
config/: runner.yaml
logs/: VM-error-logs.md
modelcards/: MiroThinker-1.7-mini-AWQ-4bit-Modelcard.md  Phi-4-multimodal-instruct-Modelcard.md  Royalcities-Foundation-1--Music-Audio-Model-Modelcard.md  Sentinel-4b-Modelcard.md  foundation-1-music-smapling-modelcard.md  google-gemma-4-31B-it-modelcard.md  google-gemma4-e2b-it-modelcard.md  rednote-nilab--dots.mocr.md
scripts/: smoke.sh
tests/: test_auth_and_routes.py  test_capabilities.py  test_normalization.py
